had problems because with them allocation and initialization was separated and
the GC could sometimes observe half initialized cells.  Only careful coding by
the user of SCM_NEWCELL and SCM_NEWCELL2 could make this safe and efficient.

** CHECK_ENTRY, CHECK_APPLY and CHECK_EXIT have been deprecated.

Use the variables scm_check_entry_p, scm_check_apply_p and scm_check_exit_p
instead.

** Removed definitions:  scm_lisp_nil, scm_lisp_t, s_nil_ify, scm_m_nil_ify,
s_t_ify, scm_m_t_ify, s_0_cond, scm_m_0_cond, s_0_ify, scm_m_0_ify, s_1_ify,
scm_m_1_ify, scm_debug_newcell,	scm_debug_newcell2, scm_tc16_allocated,
SCM_SET_SYMBOL_HASH, SCM_IM_NIL_IFY, SCM_IM_T_IFY, SCM_IM_0_COND,
SCM_IM_0_IFY, SCM_IM_1_IFY, SCM_GC_SET_ALLOCATED, scm_debug_newcell,
scm_debug_newcell2, scm_substring_move_left_x, scm_substring_move_right_x,
long_long, ulong_long, scm_sizet, SCM_WNA, SCM_OUTOFRANGE, SCM_NALLOC,
SCM_HUP_SIGNAL, SCM_INT_SIGNAL, SCM_FPE_SIGNAL,	SCM_BUS_SIGNAL,
SCM_SEGV_SIGNAL, SCM_ALRM_SIGNAL, SCM_GC_SIGNAL, SCM_TICK_SIGNAL,
SCM_SIG_ORD, SCM_ORD_SIG, SCM_NUM_SIGS, moddata, registered_mods,
scm_register_module_xxx, scm_registered_modules,
scm_clear_registered_modules, scm_wta, *top-level-lookup-closure*,
scm_top_level_lookup_closure_var, scm_system_transformer, scm_eval_3,
scm_eval2, SCM_SETAND_CAR, SCM_SETOR_CAR, SCM_SETAND_CDR, SCM_SETOR_CDR,
SCM_FREEP, SCM_NFREEP, SCM_GC8MARKP, SCM_SETGC8MARK, SCM_CLRGC8MARK,
SCM_GCTYP16, SCM_GCCDR, scm_remember, scm_protect_object,
scm_unprotect_object, root_module_lookup_closure, scm_sym_app,
scm_sym_modules, module_prefix, make_modules_in_var,
beautify_user_module_x_var, try_module_autoload_var, scm_module_full_name,
scm_the_root_module, scm_make_module, scm_ensure_user_module,
scm_load_scheme_module, scm_port, scm_ptob_descriptor, scm_port_rw_active,
scm_close_all_ports_except, scm_rstate, scm_rng, scm_i_rstate,
SCM_SLOPPY_STRINGP, SCM_RWSTRINGP, SCM_STRING_UCHARS, SCM_STRING_CHARS,
scm_read_only_string_p, scm_makstr, scm_makfromstr,